--- a/index.html
+++ b/index.html
@@ -10,6 +10,16 @@
 <p>segundo párrafo</p>
 <p>tercer párrafo</p>
 
+<table border="1">
+	<tr>
+		<td>11</td>
+	</tr>
+	<tr>
+		<td>21</td>
+	</tr>
+	<tr>
+		<td>31</td>
+	</tr>
 
 </BODY>
 </HTML>
